--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -56,6 +56,14 @@ android {
 
     }
 
+    buildTypes {
+        debug {
+            debuggable true
+        }
+        release {
+            debuggable false
+        }
+    }
 }
 
 
